kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-app-svc
spec:
  selector:
    app.kubernetes.io/name: app-php
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: http
